--- a/sfml3/CMakeLists.txt
+++ b/sfml3/CMakeLists.txt
@@ -9,3 +9,5 @@ find_package(JPEG REQUIRED)
 find_package(SFML 2 COMPONENTS window graphics system REQUIRED)
 
 add_subdirectory(sfml3.1)
+add_subdirectory(sfml3.2)
+add_subdirectory(sfml3.3)
