--- a/workshop2/CMakeLists.txt
+++ b/workshop2/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(workshop2.4)
 add_subdirectory(workshop2.5)
 add_subdirectory(workshop2.6)
 add_subdirectory(workshop2.7)
+add_subdirectory(workshop2.8)
